# MLOps-Boilerplate

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
config/: training_config.json  training_config.yaml  training_regression_example.json
docs/examples/: README.md
ml_service/: __init__.py  config.py
ml_service/applications/: __init__.py  api_server.py  inference.py  training.py
ml_service/cli/: create_project.py
ml_service/data_layer/: __init__.py  data_connector.py  object_connector.py
ml_service/machine_learning/: __init__.py  cross_validator.py  data_processor.py  experiment_tracking.py  hyperparameter_tuning.py  model.py  model_registry.py  training_pipeline.py
ml_service/monitoring/: __init__.py  data_drift.py  model_monitor.py
monitoring/: prometheus.yml
tests/: __init__.py  conftest.py  test_config.py  test_cross_validator.py  test_data_processor.py  test_model.py
